alter project display endpoint
